server init ,hot reload added

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "test",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "start": "node index.js",
+     "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
